force-app/main/default/objects/Matricula__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relacion Account - Alumno inscrito</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matriculas</relationshipLabel>
    <relationshipName>Matriculas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>