force-app/main/default/objects/Matricula__c/fields/Curso__c.field-meta.xml
<CustomField>
    <fullName>Curso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion Curso - Alumno Matriculado</description>
    <label>Curso</label>
    <referenceTo>Curso__c</referenceTo>
    <relationshipLabel>Matriculas</relationshipLabel>
    <relationshipName>Matriculas</relationshipName>
    <type>Lookup</type>
</CustomField>