force-app/main/default/objects/Matricula__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021 - I</fullName>
            </value>
            <value>
                <fullName>2021 - II</fullName>
            </value>
            <value>
                <fullName>2022 - I</fullName>
            </value>
            <value>
                <fullName>2022 - II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>