force-app/main/default/objects/Matricula__c/fields/Turno__c.field-meta.xml
<CustomField>
    <fullName>Turno__c</fullName>
    <label>Turno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mañana</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Noche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>