force-app/main/default/objects/Matricula__c/recordTypes/Matricula.recordType-meta.xml
<RecordType>
    <fullName>Matricula</fullName>
    <active>true</active>
    <label>Matricula</label>
</RecordType>