force-app/main/default/objects/Matricula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Curso__c</columns>
    <columns>Periodo__c</columns>
    <columns>Turno__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>